landing page dropdowns

--- a/src/Loading screen/index.html
+++ b/src/Loading screen/index.html
@@ -30,47 +30,51 @@
                         loading...
                     </p>
                     <div id="outer-loader">
-                        <p>0%</p>
+                        <p>
+                            0%
+                        </p>
                         <div id="inner-loader">
                         </div>
                     </div>
                 </div>
             </div>
             <div id="features-container">
-                <div class="features-inner-container">
-                    <div class="features" id="features-first">
-                        <p class="features-text">
-                            Phone
-                        </p>
+                <div id="features-wrapper">
+                    <div class="features-inner-container">
+                        <div class="features" id="features-first">
+                            <p class="features-text">
+                                Phone
+                            </p>
+                        </div>
+                        <div class="info">
+                        </div>
                     </div>
-                    <div class="info">
+                    <div class="features-inner-container">
+                        <div class="features" id="features-second">
+                            <p class="features-text">
+                                Statistics
+                            </p>
+                        </div>
+                        <div class="info">
+                        </div>
                     </div>
-                </div>
-                <div class="features-inner-container">
-                    <div class="features" id="features-second">
-                        <p class="features-text">
-                            Statistics
-                        </p>
+                    <div class="features-inner-container">
+                        <div class="features" id="features-third">
+                            <p class="features-text">
+                                Developer
+                            </p>
+                        </div>
+                        <div class="info">
+                        </div>
                     </div>
-                    <div class="info">
-                    </div>
-                </div>
-                <div class="features-inner-container">
-                    <div class="features" id="features-third">
-                        <p class="features-text">
-                            Developer
-                        </p>
-                    </div>
-                    <div class="info">
-                    </div>
-                </div>
-                <div class="features-inner-container">
-                    <div class="features" id="features-forth">
-                        <p class="features-text">
-                            Map
-                        </p>
-                    </div>
-                    <div class="info">
+                    <div class="features-inner-container">
+                        <div class="features" id="features-forth">
+                            <p class="features-text">
+                                Map
+                            </p>
+                        </div>
+                        <div class="info">
+                        </div>
                     </div>
                 </div>
             </div>
