--- a/src/Loading screen/index.html
+++ b/src/Loading screen/index.html
@@ -42,9 +42,13 @@
                 <div id="features-wrapper">
                     <div class="features-inner-container">
                         <div class="features" id="features-first">
-                            <p class="features-text">
+                            <video autoplay="" class="video">
+                                <source src="http://dfcb.github.io/BigVideo.js/vids/dock.mp4" type="video/mp4">
+                                </source>
+                            </video>
+                            <!-- <p class="features-text">
                                 Phone
-                            </p>
+                            </p> -->
                         </div>
                         <div class="info">
                         </div>
