--- a/src/About Us/aboutUs.html
+++ b/src/About Us/aboutUs.html
@@ -58,10 +58,10 @@
 			</div>
 		</div>
 		<div id="headerEquipo">
-			<h2 id="eslogan">Team is inspiration</h2>
-			
-			<p id="textoEquipo">Frase inspiradora sobre equipos</p>
+			<h2 class="eslogan">Team is inspiration</h2>
 			<div class="horizontal"></div>
+			<p id="textoEquipo">Frase inspiradora sobre equipos</p>
+			
 		</div>
 		<h3>Nuestro equipo</h3>
 		<div id="quienesSomos">
@@ -86,10 +86,30 @@
 				<img src="persona4.jpg">
 			</div>
 		</div>
-
-		<div >
+		<h2 class="eslogan">Comentanos lo que quieras</h2>
+		<div class="horizontal"></div>
+		<div id="formulario">
 			
+			<form>
+				
+				<input type="text" name="nombre" placeholder="Nombre completo"><br>
+				<input type="text" name="e-mail" placeholder="E-mail"><br>
+				<input type="text" name="telefono" placeholder="Telefono"><br>
+				<textarea placeholder="Introduce tu mensaje"></textarea><br>
+				<button>
+					<img src="enviar.png">
+					Enviar
+				</button>
+			</form> 
 		</div>
+		<footer>
+			<div class="horizontal2"></div>
+			<a href=""><img src="twitter.png"></a>
+			<a href=""><img src="facebook.png"></a>
+			<a href=""><img src="instagram.png"></a>
+			<a href=""><img src="youtube.png"></a>
+			<div class="horizontal2"></div>
+		</footer>
 	</div>
 </body>
 </html>
