about us practicamente acabado

--- a/src/About Us/aboutUs.html
+++ b/src/About Us/aboutUs.html
@@ -6,10 +6,36 @@
 </head>
 <body>
 	<header>
-		<div id="navegador">
-			
-		</div>
+		<div id="menu">
+		<div id="logoMenu">
+		    <a href="">SAMAify</a>
+	        <hr>
+	    </div>
+	    <ul>
+	          <li>
+	            <a href="">
+	              <p><img src="images/tranvia.png"> animacion</p>
+	            </a>
+	          </li>
+	          <li>
+	            <a href="">
+	              <p><img src="images/estadisticas.png">estadisticas</p>
+	            </a>
+	          </li>
+	          <li>
+	            <a href="">
+	              <p><img src="images/modificar.png"> sandbox</p>
+	            </a>
+	          </li>
+	          <li>
+	            <a href="">
+	              <p><img src="images/aboutUs.png" class="aboutUs"> About us</p>
+	            </a>
+	          </li>
+        </ul>
+      </div>
 		<div id="menuHorizontal">
+			<img id="logo" src="images/Logo SAMAify.png">
 			<ul>
 				<a href=""><li>Nuestros Servicios</li></a>
 				<a href=""><li>Fortalezas</li></a>
@@ -22,10 +48,10 @@
 		<h1>Dreams inside you</h1>
 		<div class="horizontal"></div>
 
-		<h3>Nuestros servicios</h3>
+		<h2 class="eslogan">Nuestros servicios</h2>
 		<div id="servicios">
 			<div class="columna">
-				<img src="raton.svg">
+				<img src="images/raton.svg">
 				<h2>Desarrollo web</h2>
 				<ul>
 					<li>1 comentario</li>
@@ -34,7 +60,7 @@
 				</ul>
 			</div>
 			<div class="columna">
-				<img src="pagina.svg">
+				<img src="images/pagina.svg">
 				<h2>Diseño web interactivo</h2>
 				<ul>
 					<li>1 comentario</li>
@@ -43,7 +69,7 @@
 				</ul>
 			</div>
 			<div class="columna">
-				<img src="telefono.svg">
+				<img src="images/telefono.svg">
 				<h2>Desarrollo movil</h2>
 				<ul>
 					<li>1 comentario</li>
@@ -52,38 +78,62 @@
 				</ul>
 			</div>
 		</div>
+
+		<h2 class="eslogan">Nuestras virtudes</h2>
+		<div class="horizontal"></div>
 		<div id="Fortalezas">
-			<div >
+			<div id="imagenes">
+				 <img src="images/imaginacion.png">
+				 <img src="images/aprendizaje.png">
+				 <img src="images/motivacion.png">
+			</div>
+			<div id="informacion">
+				<div class="fortaleza">
+					<h2>Diseño sin limitaciones.</h2>
+					<p>Despues de una buena planificacion, el diseñador podra trabajar siguiendo 
+					su propio metodo, sin ningun tipo de limitacion. Siempre dentro de unos parametros previamente definidos.</p>
+				</div>
 				
+				<div class="fortaleza">
+					<h2>Aprendizaje Mutuo.</h2>
+					<p>Los diseñadores utilizamos herramientas muy parecidas, pero a la hora de utilizarlas cada miembro tiene su propio estilo o gusto. Por lo que podremos aprender como lo utilizan cada perosna y decidir cual es la manera mas eficiente.</p>
+				</div>
+				<div class="fortaleza">
+					<h2>Motivación.</h2>
+					<p>Nunca perdemos la motivacion, esto nos abre las puerta de aprender 
+					y descubir nuevos conceptos de diseño ya que el diseño web 
+					es un mundo en constante cambio.</p>
+				</div>
 			</div>
 		</div>
 		<div id="headerEquipo">
-			<h2 class="eslogan">Team is inspiration</h2>
-			<div class="horizontal"></div>
-			<p id="textoEquipo">Frase inspiradora sobre equipos</p>
-			
+			<div id="float">
+				<h2>Team is inspiration</h2>
+			</div>
+			<p id="textoEquipo">“Puedes diseñar y crear, y construir el lugar más maravilloso del mundo, pero se necesita gente para hacer el sueño realidad", Walt Disney.</p>
 		</div>
-		<h3>Nuestro equipo</h3>
+		<h2 class="eslogan">Nuestro equipo</h2>
+		<div class="horizontal"></div>
 		<div id="quienesSomos">
 			<div class="columna2">
 				<h4>Adrian Danlos</h4>
 				<p>Coordinador</p>
-				<img src="persona1.jpg">
+				<img src="images/persona1.jpg">
 			</div>
 			<div class="columna2">
 				<h4>Aritz Martinez</h4>
 				<p>Responsable de material</p>
-				<img src="persona2.jpg">
+				<img src="images/persona2.jpg">
 			</div>
 			<div class="columna2">
 				<h4>Sergio Zulueta</h4>
 				<p>Planificador</p>
-				<img src="persona3.jpg">
+				<img src="images/persona3.jpg">
 			</div>
 			<div class="columna2">
 				<h4>Miguel Barros</h4>
 				<p>Reportero</p>
-				<img src="persona4.jpg">
+				<img src="images/persona4.jpg">
 			</div>
 		</div>
 		<h2 class="eslogan">Comentanos lo que quieras</h2>
@@ -97,19 +147,20 @@
 				<input type="text" name="telefono" placeholder="Telefono"><br>
 				<textarea placeholder="Introduce tu mensaje"></textarea><br>
 				<button>
-					<img src="enviar.png">
+					<img src="images/enviar.png">
 					Enviar
 				</button>
 			</form> 
 		</div>
 		<footer>
 			<div class="horizontal2"></div>
-			<a href=""><img src="twitter.png"></a>
-			<a href=""><img src="facebook.png"></a>
-			<a href=""><img src="instagram.png"></a>
-			<a href=""><img src="youtube.png"></a>
+			<a href=""><img src="images/twitter.png"></a>
+			<a href=""><img src="images/facebook.png"></a>
+			<a href=""><img src="images/instagram.png"></a>
+			<a href=""><img src="images/youtube.png"></a>
 			<div class="horizontal2"></div>
 		</footer>
+		<p id="textoFooter">Licensed by SAMAify</p>
 	</div>
 </body>
 </html>
