--- a/src/Navegador Reto1/menuReto1.html
+++ b/src/Navegador Reto1/menuReto1.html
@@ -5,9 +5,9 @@
 	<link rel="stylesheet" type="text/css" href="navegadorReto1.css">
 </head>
 <body>
-	<template>
+	
 	<div id="menu">
-		<div id="logo">
+		<div id="logoMenu">
 		    <a href="">SAMAify</a>
 	        <hr>
 	    </div>
@@ -40,6 +40,6 @@
   <p>We have also added a media query for screens that are 400px or less, which will vertically stack and center the navigation links.</p>
   <h3>Resize the browser window to see the effect.</h3>
 </div>
-</template>
+
 </body>
 </html>
