grafica con menu

--- a/src/html/grafica.html
+++ b/src/html/grafica.html
@@ -4,10 +4,51 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
     <script type="text/javascript" src="../js/Chart.js"></script>
+    <link rel="stylesheet" type="text/css" href="../Navegador%20Reto1/navegadorReto1.css">
+
     <title>Grafica</title>
 </head>
 <body>
-<canvas id="miGrafica" width="400" height="300" id="miGrafica"></canvas>
+
+<div id="menu">
+    <div id="logo">
+        <a href="">SAMAify</a>
+        <hr>
+    </div>
+    <ul>
+        <li>
+            <a href="">
+                <p><img src="tranvia.png"> animacion</p>
+            </a>
+        </li>
+        <li>
+            <a href="">
+                <p><img src="estadisticas.png">estadisticas</p>
+            </a>
+        </li>
+        <li>
+            <a href="">
+                <p><img src="modificar.png"> sandbox</p>
+            </a>
+        </li>
+        <li>
+            <a href="">
+                <p><img src="aboutUs.png" class="aboutUs"> About us</p>
+            </a>
+        </li>
+    </ul>
+</div>
+<div class="content">
+    <h2>Responsive Sidebar Example</h2>
+    <p>This example use media queries to transform the sidebar to a top navigation bar when the screen size is 700px or
+        less.</p>
+    <p>We have also added a media query for screens that are 400px or less, which will vertically stack and center the
+        navigation links.</p>
+    <h3>Resize the browser window to see the effect.</h3>
+    <canvas id="miGrafica" width="400" height="300" id="miGrafica"></canvas>
+</div>
+
+
 <script type="text/javascript" src="../js/grafica.js"></script>
 </body>
 </html>
