--- a/src/Loading screen/index.html
+++ b/src/Loading screen/index.html
@@ -42,19 +42,21 @@
                 <div id="features-wrapper">
                     <div class="features-inner-container">
                         <div class="features" id="features-first">
-                            <video autoplay="" class="video">
+                            <video class="video">
                                 <source src="http://dfcb.github.io/BigVideo.js/vids/dock.mp4" type="video/mp4">
-                                </source>
                             </video>
-                            <!-- <p class="features-text">
+                             <p class="features-text">
                                 Phone
-                            </p> -->
+                            </p>
                         </div>
                         <div class="info">
                         </div>
                     </div>
                     <div class="features-inner-container">
                         <div class="features" id="features-second">
+                            <video class="video">
+                                <source src="http://dfcb.github.io/BigVideo.js/vids/dock.mp4" type="video/mp4">
+                            </video>
                             <p class="features-text">
                                 Statistics
                             </p>
@@ -64,6 +66,9 @@
                     </div>
                     <div class="features-inner-container">
                         <div class="features" id="features-third">
+                            <video class="video">
+                                <source src="http://dfcb.github.io/BigVideo.js/vids/dock.mp4" type="video/mp4">
+                            </video>
                             <p class="features-text">
                                 Developer
                             </p>
@@ -73,6 +78,9 @@
                     </div>
                     <div class="features-inner-container">
                         <div class="features" id="features-forth">
+                            <video class="video">
+                                <source src="http://dfcb.github.io/BigVideo.js/vids/dock.mp4" type="video/mp4">
+                            </video>
                             <p class="features-text">
                                 Map
                             </p>
