--- a/src/Navegador Reto1/menuReto1.html
+++ b/src/Navegador Reto1/menuReto1.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="navegadorReto1.css">
+	<link rel="stylesheet" type="text/css" href="../css/navegadorReto1.css">
+	<script type="text/javascript" src="../js/template.js"></script>
 </head>
 <body>
-	<template>
+	<template id="plantillaMenu">
 	<div id="menu">
 		<div id="logo">
 		    <a href="">SAMAify</a>
@@ -14,22 +15,22 @@
 	    <ul>
 	          <li>
 	            <a href="">
-	              <p><img src="tranvia.png"> animacion</p>
+	              <p><img src="../imagenes/tranvia.png"> animacion</p>
 	            </a>
 	          </li>
 	          <li>
 	            <a href="">
-	              <p><img src="estadisticas.png">estadisticas</p>
+	              <p><img src="../imagenes/estadisticas.png">estadisticas</p>
 	            </a>
 	          </li>
 	          <li>
 	            <a href="">
-	              <p><img src="modificar.png"> sandbox</p>
+	              <p><img src="../imagenes/modificar.png"> sandbox</p>
 	            </a>
 	          </li>
 	          <li>
 	            <a href="">
-	              <p><img src="aboutUs.png" class="aboutUs"> About us</p>
+	              <p><img src="../imagenes/aboutUs.png" class="aboutUs"> About us</p>
 	            </a>
 	          </li>
         </ul>
@@ -41,5 +42,6 @@
   <h3>Resize the browser window to see the effect.</h3>
 </div>
 </template>
+	<script type="text/javascript" src="../js/template.js"></script>
 </body>
 </html>
