cambios aleatorios migui

--- a/src/About Us/aboutUs.html
+++ b/src/About Us/aboutUs.html
@@ -119,25 +119,33 @@
 				<h4>Adrian Danlos</h4>
 				<p>Coordinador</p>
 				<img class="persona" src="images/persona1.jpg">
-				<img class="mas" src="images/mas.png">
+				<div class="text">
+					<p>hola buenas tardes</p>
+				</div>
 			</div>
 			<div class="columna2">
 				<h4>Aritz Martinez</h4>
 				<p>Responsable de material</p>
 				<img class="persona" src="images/persona2.jpg">
-				<img class="mas" src="images/mas.png">
+				<div class="text">
+					<p>hola buenas tardes</p>
+				</div>
 			</div>
 			<div class="columna2">
 				<h4>Sergio Zulueta</h4>
 				<p>Planificador</p>
 				<img class="persona" src="images/persona3.jpg">
-				<img class="mas" src="images/mas.png">
+				<div class="text">
+					<p>hola buenas tardes</p>
+				</div>
 			</div>
 			<div class="columna2">
 				<h4>Miguel Barros</h4>
 				<p>Reportero</p>
 				<img class="persona" src="images/persona4.jpg">
-				<img class="mas" src="images/mas.png">
+				<div class="text">
+					<p>hola buenas tardes</p>
+				</div>
 			</div>
 		</div>
 		<h2 class="eslogan" id="contacto">Comentanos lo que quieras</h2>
