--- a/src/html/aboutUs.html
+++ b/src/html/aboutUs.html
@@ -14,28 +14,28 @@
 	    <ul>
 	          <li>
 	            <a href="">
-	              <p><img src="images/tranvia.png"> animacion</p>
+	              <p><img src="../img/tranvia.png"> animacion</p>
 	            </a>
 	          </li>
 	          <li>
 	            <a href="">
-	              <p><img src="images/estadisticas.png">estadisticas</p>
+	              <p><img src="../img/estadisticas.png">estadisticas</p>
 	            </a>
 	          </li>
 	          <li>
 	            <a href="">
-	              <p><img src="images/modificar.png"> sandbox</p>
+	              <p><img src="../img/modificar.png"> sandbox</p>
 	            </a>
 	          </li>
 	          <li>
 	            <a href="">
-	              <p><img src="images/aboutUs.png" class="aboutUs"> About us</p>
+	              <p><img src="../img/aboutUs.png" class="aboutUs"> About us</p>
 	            </a>
 	          </li>
         </ul>
       </div>
 		<div id="menuHorizontal">
-			<img id="logo" src="images/Logo SAMAify.png">
+			<img id="logo" src="../img/Logo%20SAMAify.png">
 			<ul>
 				<a href="#servicios"><li>Nuestros Servicios</li></a>
 				<a href="#virtudes"><li>Virtudes</li></a>
@@ -51,7 +51,7 @@
 		<h2 class="eslogan" id="servicios">Nuestros servicios</h2>
 		<div id="servicios">
 			<div class="columna">
-				<img src="images/raton.svg">
+				<img src="../img/raton.svg">
 				<h2>Desarrollo web</h2>
 				<ul>
 					<li>1 comentario</li>
@@ -60,7 +60,7 @@
 				</ul>
 			</div>
 			<div class="columna">
-				<img src="images/pagina.svg">
+				<img src="../img/pagina.svg">
 				<h2>Diseño web interactivo</h2>
 				<ul>
 					<li>1 comentario</li>
@@ -69,7 +69,7 @@
 				</ul>
 			</div>
 			<div class="columna">
-				<img src="images/telefono.svg">
+				<img src="../img/telefono.svg">
 				<h2>Desarrollo movil</h2>
 				<ul>
 					<li>1 comentario</li>
@@ -83,9 +83,9 @@
 		<div class="horizontal"></div>
 		<div id="Fortalezas">
 			<div id="imagenes">
-				 <img src="images/imaginacion.png">
-				 <img src="images/aprendizaje.png">
-				 <img src="images/motivacion.png">
+				 <img src="../img/imaginacion.png">
+				 <img src="../img/aprendizaje.png">
+				 <img src="../img/motivacion.png">
 			</div>
 			<div id="informacion">
 				<div class="fortaleza">
@@ -118,7 +118,7 @@
 			<div class="columna2">
 				<h4>Adrian Danlos</h4>
 				<p>Coordinador</p>
-				<img class="persona" src="images/persona1.jpg">
+				<img class="persona" src="../img/persona1.jpg">
 				<div class="text">
 					<p>hola buenas tardes</p>
 				</div>
@@ -126,7 +126,7 @@
 			<div class="columna2">
 				<h4>Aritz Martinez</h4>
 				<p>Responsable de material</p>
-				<img class="persona" src="images/persona2.jpg">
+				<img class="persona" src="../img/persona2.jpg">
 				<div class="text">
 					<p>hola buenas tardes</p>
 				</div>
@@ -134,7 +134,7 @@
 			<div class="columna2">
 				<h4>Sergio Zulueta</h4>
 				<p>Planificador</p>
-				<img class="persona" src="images/persona3.jpg">
+				<img class="persona" src="../img/persona3.jpg">
 				<div class="text">
 					<p>hola buenas tardes</p>
 				</div>
@@ -142,7 +142,7 @@
 			<div class="columna2">
 				<h4>Miguel Barros</h4>
 				<p>Reportero</p>
-				<img class="persona" src="images/persona4.jpg">
+				<img class="persona" src="../img/persona4.jpg">
 				<div class="text">
 					<p>hola buenas tardes</p>
 				</div>
@@ -157,18 +157,18 @@
 				<input type="text" name="telefono" placeholder="Telefono"><br>
 				<textarea placeholder="Introduce tu mensaje"></textarea><br>
 				<button>
-					<img src="images/enviar.png">
+					<img src="../img/enviar.png">
 					Enviar
 				</button>
 			</form> 
 		</div>
 		<footer>
 			<div class="horizontal2"></div>
-			<a href=""><img src="images/twitter.png"></a>
-			<a href=""><img src="images/facebook.png"></a>
-			<a href=""><img src="images/instagram.png"></a>
-			<a href=""><img src="images/youtube.png"></a>
-			<a href="https://github.com/SAMAifyWEB/RETO1"><img src="images/github.png"></a>
+			<a href=""><img src="../img/twitter.png"></a>
+			<a href=""><img src="../img/facebook.png"></a>
+			<a href=""><img src="../img/instagram.png"></a>
+			<a href=""><img src="../img/youtube.png"></a>
+			<a href="https://github.com/SAMAifyWEB/RETO1"><img src="../img/github.png"></a>
 			<div class="horizontal2"></div>
 		</footer>
 		<p id="textoFooter">Licensed by SAMAify</p>
