--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,11 +4,11 @@
         <title>
             RT Train
         </title>
-        <link href="styles.css" rel="stylesheet" type="text/css">
+        <link href="../css/stylesIndex.css" rel="stylesheet" type="text/css">
             <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap" rel="stylesheet">
                 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
                 </script>
-                <script src="loader.js">
+                <script src="../js/loader.js">
                 </script>
             </link>
         </link>
@@ -16,7 +16,7 @@
     <body>
         <main>
             <div id="logo-samaify">
-                <img alt="samaify" src="img/logo.png">
+                <img alt="samaify" src="../img/logo.png">
             </div>
             <div id="content">
                 <div>
