--- a/src/html/grafica.html
+++ b/src/html/grafica.html
@@ -11,29 +11,29 @@
 <body>
 
 <div id="menu">
-    <div id="logo">
+    <div id="logoMenu">
         <a href="">SAMAify</a>
         <hr>
     </div>
     <ul>
         <li>
             <a href="">
-                <p><img src="tranvia.png"> animacion</p>
+                <p><img src="../img/tranvia.png"> animacion</p>
             </a>
         </li>
         <li>
             <a href="">
-                <p><img src="estadisticas.png">estadisticas</p>
+                <p><img src="../img/estadisticas.png">estadisticas</p>
             </a>
         </li>
         <li>
             <a href="">
-                <p><img src="modificar.png"> sandbox</p>
+                <p><img src="../img/modificar.png"> sandbox</p>
             </a>
         </li>
         <li>
             <a href="">
-                <p><img src="aboutUs.png" class="aboutUs"> About us</p>
+                <p><img src="../img/aboutUs.png" class="aboutUs"> About us</p>
             </a>
         </li>
     </ul>
