--- a/src/html/aboutUs.html
+++ b/src/html/aboutUs.html
@@ -12,26 +12,26 @@
 	        <hr>
 	    </div>
 	    <ul>
-	          <li>
-	            <a href="">
-	              <p><img src="../img/tranvia.png"> animacion</p>
+	         <li>
+	            <a href="index.html">
+	             	<p><img src="../img/tranvia.png"> animacion</p>
 	            </a>
-	          </li>
-	          <li>
-	            <a href="">
+	        </li>
+	        <li>
+	            <a href="grafica.html">
 	              <p><img src="../img/estadisticas.png">estadisticas</p>
 	            </a>
-	          </li>
-	          <li>
-	            <a href="">
+	        </li>
+	        <li>
+	            <a href="sandbox.html">
 	              <p><img src="../img/modificar.png"> sandbox</p>
 	            </a>
-	          </li>
-	          <li>
-	            <a href="">
+	        </li>
+	        <li>
+	            <a href="aboutUs.html">
 	              <p><img src="../img/aboutUs.png" class="aboutUs"> About us</p>
 	            </a>
-	          </li>
+	        </li>
         </ul>
       </div>
 		<div id="menuHorizontal">
@@ -54,9 +54,9 @@
 				<img src="../img/raton.svg">
 				<h2>Desarrollo web</h2>
 				<ul>
-					<li>1 comentario</li>
-					<li>2 comentario</li>
-					<li>3 comentario</li>
+					<li>Proyectos con JavaScript</li>
+					<li>CSS avanzado</li>
+					<li>Mantenimiento de cualquier proyecto</li>
 				</ul>
 			</div>
 			<div class="columna">
@@ -72,9 +72,9 @@
 				<img src="../img/telefono.svg">
 				<h2>Desarrollo movil</h2>
 				<ul>
-					<li>1 comentario</li>
-					<li>2 comentario</li>
-					<li>3 comentario</li>
+					<li>Aplicaciones para MAC</li>
+					<li>Aplicaciones para Android</li>
+					<li>Aplicacines para iOS</li>
 				</ul>
 			</div>
 		</div>
