--- a/src/html/grafica.html
+++ b/src/html/grafica.html
@@ -16,27 +16,26 @@
         <hr>
     </div>
     <ul>
-        <li>
-            <a href="">
-                <p><img src="../img/tranvia.png"> animacion</p>
-            </a>
-        </li>
-        <li>
-            <a href="">
-                <p><img src="../img/estadisticas.png">estadisticas</p>
-            </a>
-        </li>
-        <li>
-            <a href="">
-                <p><img src="../img/modificar.png"> sandbox</p>
-            </a>
-        </li>
-        <li>
-            <a href="">
-                <p><img src="../img/aboutUs.png" class="aboutUs"> About us</p>
-            </a>
-        </li>
-    </ul>
+    <li>
+        <a href="index.html">
+          <p><img src="../img/tranvia.png"> animacion</p>
+         </a>
+     </li>
+    <li>
+        <a href="grafica.html">
+         <p><img src="../img/estadisticas.png">estadisticas</p>
+         </a>
+    </li>
+     <li>
+         <a href="sandbox.html">
+        <p><img src="../img/modificar.png"> sandbox</p>
+         </a>
+     </li>
+     <li>
+         <a href="aboutUs.html">
+         <p><img src="../img/aboutUs.png" class="aboutUs"> About us</p>
+         </a>
+      </li>
 </div>
 <div class="content">
     <h2>Responsive Sidebar Example</h2>
