--- a/src/html/sandbox.html
+++ b/src/html/sandbox.html
@@ -3,37 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="../css/navegadorReto1.css">
-    <link rel="stylesheet" type="text/css" href="../css/sandbox.css">
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
 <body>
 <div id="menu">
-    <div id="logo">
+    <div id="logoMenu">
         <a href="">SAMAify</a>
         <hr>
     </div>
     <ul>
-        <li>
-            <a href="">
-                <p><img src="../imagenes/tranvia.png"> animacion</p>
+       <li>
+            <a href="index.html">
+                <p><img src="../img/tranvia.png"> animacion</p>
             </a>
         </li>
         <li>
-            <a href="">
-                <p><img src="../imagenes/estadisticas.png">estadisticas</p>
+            <a href="grafica.html">
+                <p><img src="../img/estadisticas.png">estadisticas</p>
             </a>
         </li>
         <li>
-            <a href="">
-                <p><img src="../imagenes/modificar.png"> sandbox</p>
+            <a href="sandbox.html">
+                <p><img src="../img/modificar.png"> sandbox</p>
             </a>
-        </li>
+         </li>
         <li>
-            <a href="">
-                <p><img src="../imagenes/aboutUs.png" class="aboutUs"> About us</p>
-            </a>
+            <a href="aboutUs.html">
+                <p><img src="../img/aboutUs.png" class="aboutUs"> About us</p>
+             </a>
         </li>
-    </ul>
 </div>
 <div class="content">
     <h2>Datos</h2>
@@ -68,9 +66,15 @@
         </div>
         <div >
             <p>
-                <input class="boton" type="button" value="Iniciar">
-                <input class="boton" type="button" value="Parar">
-                <input class="boton" type="submit" value="Cambiar valores">
+                <button>
+                    Iniciar
+                </button>
+                <button>
+                    Parar
+                </button>
+                <button>
+                    Cambiar Valores
+                </button>
             </p>
         </div>
     </form>
