--- a/src/html/grafica.html
+++ b/src/html/grafica.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
     <script type="text/javascript" src="../js/Chart.js"></script>
-    <link rel="stylesheet" type="text/css" href="../Navegador%20Reto1/navegadorReto1.css">
 
     <title>Grafica</title>
 </head>
@@ -46,8 +45,8 @@
         navigation links.</p>
     <h3>Resize the browser window to see the effect.</h3>
     <canvas id="miGrafica" width="400" height="300" id="miGrafica"></canvas>
+	<p>:="mis_datos".contador:</p>
 </div>
-
 
 <script type="text/javascript" src="../js/grafica.js"></script>
 </body>
