--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>
             RT Train
         </title>
@@ -45,10 +46,22 @@
                                 <source src="http://dfcb.github.io/BigVideo.js/vids/dock.mp4" type="video/mp4">
                             </video>
                              <p class="features-text">
-                                Phone
+                                En Directo
                             </p>
                         </div>
                         <div class="info">
+                            <div class="text-container-parent">
+                                <div class="title-container"><p>Tu tranvía a tiempo real</p></div>
+                                <div class="description-container">
+                                    <p>SAMAify ha desarrollado una interfaz para visualizar la posición del tranvía a tiempo real en todo momento. Posición actual, velocidad, paradas, trayecto...todo al alcance de un click</p>
+                                </div>
+                            </div>
+                            <div class="link-container-parent">
+                                <div class="link-container">
+                                    <p class="link-text">Página completa</p>
+                                    <div class="flecha"></div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="features-inner-container">
@@ -57,10 +70,20 @@
                                 <source src="http://dfcb.github.io/BigVideo.js/vids/dock.mp4" type="video/mp4">
                             </video>
                             <p class="features-text">
-                                Statistics
+                                Estadísticas
                             </p>
                         </div>
                         <div class="info">
+                            <div class="text-container-parent">
+                                <div class="title-container"></div>
+                                <div class="description-container"></div>
+                            </div>
+                            <div class="link-container-parent">
+                                <div class="link-container">
+                                    <p class="link-text">Página completa</p>
+                                    <div class="flecha"></div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="features-inner-container">
@@ -69,10 +92,20 @@
                                 <source src="http://dfcb.github.io/BigVideo.js/vids/dock.mp4" type="video/mp4">
                             </video>
                             <p class="features-text">
-                                Developer
+                                Sandbox
                             </p>
                         </div>
                         <div class="info">
+                            <div class="text-container-parent">
+                                <div class="title-container"></div>
+                                <div class="description-container"></div>
+                            </div>
+                            <div class="link-container-parent">
+                                <div class="link-container">
+                                    <p class="link-text">Página completa</p>
+                                    <div class="flecha"></div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="features-inner-container">
@@ -81,10 +114,20 @@
                                 <source src="http://dfcb.github.io/BigVideo.js/vids/dock.mp4" type="video/mp4">
                             </video>
                             <p class="features-text">
-                                Map
+                                Desarrolladores
                             </p>
                         </div>
                         <div class="info">
+                            <div class="text-container-parent">
+                                <div class="title-container"></div>
+                                <div class="description-container"></div>
+                            </div>
+                            <div class="link-container-parent">
+                                <div class="link-container">
+                                    <p class="link-text">Página completa</p>
+                                    <div class="flecha"></div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
