--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,7 +6,7 @@
             RT Train
         </title>
         <link href="../css/stylesIndex.css" rel="stylesheet" type="text/css">
-            <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap" rel="stylesheet">
+            <link href="https://cors-anywhere.herokuapp.com/https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap" rel="stylesheet">
                 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
                 </script>
                 <script src="../js/loader.js">
@@ -59,7 +59,7 @@
                             <div class="link-container-parent">
                                 <div class="link-container">
                                     <p class="link-text">Página completa</p>
-                                    <div class="flecha"></div>
+                                    <img src="../img/arrow.png" alt="flecha" class="flecha">
                                 </div>
                             </div>
                         </div>
@@ -81,7 +81,7 @@
                             <div class="link-container-parent">
                                 <div class="link-container">
                                     <p class="link-text">Página completa</p>
-                                    <div class="flecha"></div>
+                                    <img src="../img/arrow.png" alt="flecha" class="flecha">
                                 </div>
                             </div>
                         </div>
@@ -103,7 +103,7 @@
                             <div class="link-container-parent">
                                 <div class="link-container">
                                     <p class="link-text">Página completa</p>
-                                    <div class="flecha"></div>
+                                    <img src="../img/arrow.png" alt="flecha" class="flecha">
                                 </div>
                             </div>
                         </div>
@@ -125,7 +125,7 @@
                             <div class="link-container-parent">
                                 <div class="link-container">
                                     <p class="link-text">Página completa</p>
-                                    <div class="flecha"></div>
+                                    <img src="../img/arrow.png" alt="flecha" class="flecha">
                                 </div>
                             </div>
                         </div>
