--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,14 +5,11 @@
         <title>
             RT Train
         </title>
-        <link href="../css/stylesIndex.css" rel="stylesheet" type="text/css">
-            <link href="https://cors-anywhere.herokuapp.com/https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap" rel="stylesheet">
-                <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
-                </script>
-                <script src="../js/loader.js">
-                </script>
-            </link>
-        </link>
+        <link href="../css/stylesIndex.css" rel="stylesheet" type="text/css"/>
+        <!--https://cors-anywhere.herokuapp.com/-->
+        <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap" rel="stylesheet"/>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="../js/loader.js"></script>
     </head>
     <body>
         <main>
@@ -132,18 +129,6 @@
                     </div>
                 </div>
             </div>
-            <!--
-            <div id="train-line">
-                <div class="lines" id="line1">
-                    <div class="train">
-                    </div>
-                </div>
-                <div class="lines" id="line2">
-                </div>
-                <div class="lines" id="line3">
-                </div>
-            </div>
-            -->
         </main>
     </body>
 </html>
