--- a/src/html/tiempoReal.html
+++ b/src/html/tiempoReal.html
@@ -5,6 +5,8 @@
     <title>En Directo</title>
     <link href="../css/styles.css" rel="stylesheet" type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.4.2.min.js" type="text/javascript"></script>
+    <script src="jquery.subwayMap-0.5.0.js" type="text/javascript"></script>
     <script src="../js/tiempoReal.js"></script>
 </head>
 <body>
@@ -37,16 +39,55 @@
     </ul>
 </div>
 
-<!--<div id="train-line">
+<div id="train-line">
     <div class="lines" id="line1">
-        <div class="train">
+        <div class="train" id="train1">
         </div>
     </div>
     <div class="lines" id="line2">
+        <div class="train" id="train2">
+        </div>
     </div>
     <div class="lines" id="line3">
     </div>
-</div>-->
-<script type="text/javascript" src="../js/template.js"></script>
+</div>
+
+<div id="legend">
+    <div class="subway-map" data-columns="12" data-rows="10" data-cellSize="40" data-legendId="legend" data-textClass="text" data-gridNumbers="true" data-grid="false" data-lineWidth="8">
+        <ul data-color="#ff4db2" data-label="jQuery Widgets" data-outline="true">
+            <li data-coords="2,2" data-marker="interchange"><a href="http://jqueryui.com/demos/accordion/"><a href="https://www.jqueryscript.net/accordion/">Accordion</a></a></li>
+            <li data-coords="4,2"><a href="http://jqueryui.com/demos/autocomplete/"><a href="http://jqueryui.com/demos/autocomplete/">Auto\ncomplete</a></li>
+            <li data-coords="5,3" data-dir="E"></li>
+            <li data-coords="5,7" data-marker="@station" data-labelPos="W"><a href="http://jqueryui.com/demos/slider/"><a href="https://www.jqueryscript.net/slider/">Slider</a></a></li> <!-- marker-only node -->
+            <li data-coords="6,4" data-dir="S" data-marker="interchange" data-markerInfo="h5"><a href="http://jqueryui.com/demos/<a href="https://www.jqueryscript.net/time-clock/">date</a>picker/">Date\npicker</a></li>
+            <li data-coords="7,4"></li>
+            <li data-coords="7.15,8" data-marker="@station" data-labelPos="E"><a href="http://jqueryui.com/demos/dialog/">Dialog</a></li>  <!-- marker-only node, moved to the right by 0.15 -->
+            <li data-coords="8,3" data-dir="E"></li>
+            <li data-coords="8,2"></li>
+            <li data-coords="9,1" data-dir="N"></li>
+            <li data-coords="10,2" data-dir="E" data-marker="interchange" data-labelPos="E"><a href="http://jqueryui.com/demos/button/">Button</a></li>
+            <li data-coords="10,5"></li>
+            <li data-coords="9,6" data-dir="S" data-marker="station"><a href="http://jqueryui.com/demos/progressbar/">Progress\nbar</a></li>
+            <li data-coords="6,9"></li>
+            <li data-coords="5,8" data-dir="W"></li>
+            <li data-coords="5,7"></li>
+            <li data-coords="4,6" data-dir="N"></li>
+            <li data-coords="2,6"><a href="http://jqueryui.com/demos/tabs/">Tabs</a></li>
+        </ul>
+
+        <ul data-color="#00ff00" data-label="jQuery Interactions" data-shiftCoords="0,-1">
+            <li data-coords="2,6"></li>
+            <li data-coords="2,5.9" data-marker="@interchange"> </li> <!-- marker-only node, moved up by 0.10 -->
+            <li data-coords="5,6" data-marker="@station" data-labelPos="N"><a href="http://jqueryui.com/demos/selectable/">Selectable</a></li>
+            <li data-coords="6,6"></li>
+            <li data-coords="7,3" data-marker="@station" data-labelPos="W"><a href="http://jqueryui.com/demos/resizeable/">Resizeable</a></li>
+            <li data-coords="7,5" data-dir="E" data-marker="station" data-labelPos="E"><a href="http://jqueryui.com/demos/droppable/">Droppable</a></li>
+            <li data-coords="7,1" data-marker="interchange" data-labelPos="W"><a href="http://jqueryui.com/demos/draggable/">Draggable</a></li>
+        </ul>
+
+    </div>
+</div>
+
+
 </body>
 </html>
