meadia queries de about us hecho

--- a/src/html/aboutUs.html
+++ b/src/html/aboutUs.html
@@ -53,7 +53,7 @@
 		<h1>Dreams inside you</h1>
 		<div class="horizontal"></div>
 
-		<h2 class="eslogan" id="servicios">Nuestros servicios</h2>
+		<h2 class="eslogan" id="servicio">Nuestros servicios</h2>
 		<div id="servicios">
 			<div class="columna">
 				<img src="../img/raton.svg">
