--- a/src/html/sandbox.html
+++ b/src/html/sandbox.html
@@ -4,35 +4,42 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+    <script type="text/javascript" src="../js/Navegador.js"></script>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
-<div id="menu">
-    <div id="logoMenu">
-        <a href="">SAMAify</a>
-        <hr>
-    </div>
-    <ul>
-       <li>
-            <a href="index.html">
-                <p><img src="../img/tranvia.png"> animacion</p>
-            </a>
-        </li>
-        <li>
-            <a href="grafica.html">
-                <p><img src="../img/estadisticas.png">estadisticas</p>
-            </a>
-        </li>
-        <li>
-            <a href="sandbox.html">
-                <p><img src="../img/modificar.png"> sandbox</p>
-            </a>
-         </li>
-        <li>
-            <a href="aboutUs.html">
-                <p><img src="../img/aboutUs.png" class="aboutUs"> About us</p>
-             </a>
-        </li>
-</div>
+    <header>
+        <div id="logoMenu">
+            <img id="imgMenu" src="../img/menu.png">
+            <a id="tituloMenu" href="">SAMAify</a>
+            <hr>
+        </div>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">
+                        <p><img src="../img/tranvia.png"> animacion</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="grafica.html">
+                        <p><img src="../img/estadisticas.png">estadisticas</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="sandbox.html">
+                        <p><img src="../img/modificar.png"> sandbox</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="aboutUs.html">
+                        <p><img src="../img/aboutUs.png" class="aboutUs"> About us</p>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 <div class="content">
     <h2>Datos</h2>
     <form action="ejemplo.php" method="post">
