--- a/src/html/subwayMap.htm
+++ b/src/html/subwayMap.htm
@@ -46,32 +46,46 @@
     {
         margin: 5px 5px 5px 0;
     }
+    #subway-container{
+       /* margin: 0 auto;*/
+        width: 480px;
+        height: 300px;
+        /*overflow: hidden;*/
+        position: relative;
+    }
+    #train{
+        width: 20px;
+        height: 20px;
+        background: black;
+        border-radius: 100%;
+        position: absolute;
+        top: 23%;
+        left: 6%;
+    }
 
     </style>
 </head>
 <body>
-    <div class="subway-map" data-columns="12" data-rows="10" data-cellSize="40" data-legendId="legend" data-textClass="text" data-gridNumbers="true" data-grid="false" data-lineWidth="8">
-        <ul data-color="#36AEFF" data-label="Vitoria-Gasteiz">
-            <li data-coords="4.1,2.1"><a href="http://jqueryui.com/demos/accordion/">tranvia</a></li>
-            <li data-coords="1,2" data-marker="interchange"><a href="http://jqueryui.com/demos/accordion/">Angulema</a></li>
-            <li data-coords="4,2"><a href="http://jqueryui.com/demos/autocomplete/"><a href="http://jqueryui.com/demos/autocomplete/"></a></li>
-            <li data-coords="5,3" data-dir="E"></li>
-            <li data-coords="5,7" data-marker="@station" data-labelPos="W"><a href="http://jqueryui.com/demos/slider/"></a></li> <!-- marker-only node -->
-            <li data-coords="6,4" data-dir="S" data-markerInfo="h5"><a href="http://jqueryui.com/demos/datepicker/">Parlamento</a></li>
-            <li data-coords="7,4"></li>  
-            <li data-coords="7.15,8" data-marker="@station" data-labelPos="E"><a href="http://jqueryui.com/demos/dialog/"></a></li>  <!-- marker-only node, moved to the right by 0.15 -->
-            <li data-coords="8,3" data-dir="E"></li>  
-            <li data-coords="8,2"></li>  
-            <li data-coords="9,1" data-dir="N"></li>  
-            <li data-coords="10,2" data-dir="E" data-labelPos="E"><a href="http://jqueryui.com/demos/button/"></a></li>
-            <li data-coords="10,5"></li>  
-            <li data-coords="9,6" data-dir="S" data-marker="station"><a href="http://jqueryui.com/demos/progressbar/">Lovaina</a></li>
-            <li data-coords="6,9"></li>  
-            <li data-coords="5,8" data-dir="W"></li>  
-            <li data-coords="5,7"></li>  
-            <li data-coords="4,6" data-dir="N"></li>  
-            <li data-coords="2,6" data-marker="interchange"><a href="http://jqueryui.com/demos/tabs/">Sancho el Sabio</a></li>
-        </ul>
+    <div id="subway-container">
+        <div id="train"></div>
+        <div class="subway-map" data-columns="12" data-rows="10" data-cellSize="40" data-legendId="legend" data-textClass="text" data-gridNumbers="true" data-grid="false" data-lineWidth="8">
+            <ul data-color="#36AEFF" data-label="Vitoria-Gasteiz">
+                <!--<li data-coords="4.2,2"><a href="http://jqueryui.com/demos/accordion/">tranvia</a></li>-->
+                <li data-coords="1,2" data-marker="interchange"><a href="http://jqueryui.com/demos/accordion/">Angulema</a></li>
+                <li data-coords="4,2"><a href="http://jqueryui.com/demos/autocomplete/"><a href="http://jqueryui.com/demos/autocomplete/"></a></li>
+                <li data-coords="5,3" data-dir="E"></li>
+                <li data-coords="5,7" data-marker="@station" data-labelPos="W"><a href="http://jqueryui.com/demos/slider/"></a></li> <!-- marker-only node -->
+                <li data-coords="6,4" data-dir="S" data-markerInfo="h5"><a href="http://jqueryui.com/demos/datepicker/">Parlamento</a></li>
+                <li data-coords="7,4"></li>
+                <li data-coords="7.15,8" data-marker="@station" data-labelPos="E"><a href="http://jqueryui.com/demos/dialog/"></a></li>  <!-- marker-only node, moved to the right by 0.15 -->
+                <li data-coords="8,3" data-dir="E"></li>
+                <li data-coords="8,2"></li>
+                <li data-coords="9,1" data-dir="N">Lovaina</li>
+                <li data-coords="10,2" data-dir="E" data-labelPos="E"><a href="http://jqueryui.com/demos/button/"></a></li>
+                <li data-coords="10,5"></li>
+                <li data-coords="9,6" data-dir="S" data-marker="interchange"><a href="http://jqueryui.com/demos/progressbar/">Sancho el Sabio</a></li>
+            </ul>
+        </div>
     </div>
     <div id="legend"></div>
     
