responsive web en todos los html

--- a/src/html/sandbox.html
+++ b/src/html/sandbox.html
@@ -56,16 +56,16 @@
             input name = nombre de la variable de tiaPortal
             ejem: '"mis_datos".contador'
             -->
-            <input type="text" class="mediano" name="posicionActual" size="40">
+            <input type="text" class="mediano" name="posicionActual" size="40"><br>
 
             <label class="espacio">Aceleración: </label>
-            <input type="text" class="mediano" name="aceleracion">
+            <input type="text" class="mediano" name="aceleracion"><br>
 
             <label class="espacio">Número de paradas:</label>
             <input type="text" class="mediano" name="numparadas"><br>
 
             <label class="espacio">Tiempo entre paradas: </label>
-            <input type="text" class="mediano" name="numparadas">
+            <input type="text" class="mediano" name="numparadas"><br>
 
             <label class="espacio">Tiempo del recorrido: </label>
             <input type="text" class="mediano" name="numparadas">
