--- a/src/html/aboutUs.html
+++ b/src/html/aboutUs.html
@@ -6,6 +6,7 @@
 	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<script type="text/javascript" src="../js/Navegador.js"></script>
+    <script type="text/javascript" src="../js/About Us.js"></script>
 </head>
 <body>
 	<header>
@@ -95,17 +96,17 @@
 			<div id="informacion">
 				<div class="fortaleza">
 					<h2>Diseño sin limitaciones.</h2>
-					<p>Despues de una buena planificacion, el diseñador podra trabajar siguiendo 
+					<p class="textFortaleza">Despues de una buena planificacion, el diseñador podra trabajar siguiendo
 					su propio metodo, sin ningun tipo de limitacion. Siempre dentro de unos parametros previamente definidos.</p>
 				</div>
 				
 				<div class="fortaleza">
 					<h2>Aprendizaje Mutuo.</h2>
-					<p>Los diseñadores utilizamos herramientas muy parecidas, pero a la hora de utilizarlas cada miembro tiene su propio estilo o gusto. Por lo que podremos aprender como lo utilizan cada perosna y decidir cual es la manera mas eficiente.</p>
+					<p class="textFortaleza">Los diseñadores utilizamos herramientas muy parecidas, pero a la hora de utilizarlas cada miembro tiene su propio estilo o gusto. Por lo que podremos aprender como lo utilizan cada perosna y decidir cual es la manera mas eficiente.</p>
 				</div>
 				<div class="fortaleza">
 					<h2>Motivación.</h2>
-					<p>Nunca perdemos la motivacion, esto nos abre las puerta de aprender 
+					<p class="textFortaleza">Nunca perdemos la motivacion, esto nos abre las puerta de aprender
 					y descubir nuevos conceptos de diseño ya que el diseño web 
 					es un mundo en constante cambio.</p>
 				</div>
@@ -123,7 +124,7 @@
 			<div class="columna2">
 				<h4>Adrian Danlos</h4>
 				<p>Coordinador</p>
-				<img class="persona" src="../img/persona1.jpg">
+				<img id="imgAdrian" class="persona" src="../img/persona1.jpg">
 				<div class="text">
 					<p>hola buenas tardes</p>
 				</div>
