--- a/src/html/subwayMap.htm
+++ b/src/html/subwayMap.htm
@@ -3,6 +3,7 @@
     <title>Subway Map</title>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.9.0.min.js"></script>
     <script type="text/javascript" src="jquery.subwayMap-0.5.2.js"></script>
+    <script type="text/javascript" src="../js/tiempoReal.js"></script>
     <style type="text/css">
     body
     {
@@ -47,12 +48,13 @@
         margin: 5px 5px 5px 0;
     }
     #subway-container{
-       /* margin: 0 auto;*/
+        margin: 0 auto;
         width: 480px;
         height: 300px;
         /*overflow: hidden;*/
         position: relative;
     }
+
     #train{
         width: 20px;
         height: 20px;
@@ -60,36 +62,56 @@
         border-radius: 100%;
         position: absolute;
         top: 23%;
-        left: 6%;
+        left: 7%;
+        z-index: 4000;
+        animation-name: move;
+        animation-duration: 1s;
     }
+    li{
+        top: 80px;
+        left: 40px;
+    }
+    @-webkit-keyframes move {
+        from {
+            left: 7%;
+        }
+        to {
+            left: 33%;
+        }
+    }
+
 
     </style>
 </head>
 <body>
+<div id="data">
+    <p>
+        Current Position
+        <span id="Current Position"></span>
+    </p>
+</div>
     <div id="subway-container">
         <div id="train"></div>
         <div class="subway-map" data-columns="12" data-rows="10" data-cellSize="40" data-legendId="legend" data-textClass="text" data-gridNumbers="true" data-grid="false" data-lineWidth="8">
             <ul data-color="#36AEFF" data-label="Vitoria-Gasteiz">
                 <!--<li data-coords="4.2,2"><a href="http://jqueryui.com/demos/accordion/">tranvia</a></li>-->
-                <li data-coords="1,2" data-marker="interchange"><a href="http://jqueryui.com/demos/accordion/">Angulema</a></li>
-                <li data-coords="4,2"><a href="http://jqueryui.com/demos/autocomplete/"><a href="http://jqueryui.com/demos/autocomplete/"></a></li>
+                <li data-coords="1,2" data-marker="interchange">Angulema</li>
+                <li data-coords="4,2"></li>
                 <li data-coords="5,3" data-dir="E"></li>
-                <li data-coords="5,7" data-marker="@station" data-labelPos="W"><a href="http://jqueryui.com/demos/slider/"></a></li> <!-- marker-only node -->
-                <li data-coords="6,4" data-dir="S" data-markerInfo="h5"><a href="http://jqueryui.com/demos/datepicker/">Parlamento</a></li>
+                <li data-coords="5,7" data-marker="@station" data-labelPos="W"></li> <!-- marker-only node -->
+                <li data-coords="6,4" data-dir="S" data-markerInfo="h5">Parlamento</li>
                 <li data-coords="7,4"></li>
-                <li data-coords="7.15,8" data-marker="@station" data-labelPos="E"><a href="http://jqueryui.com/demos/dialog/"></a></li>  <!-- marker-only node, moved to the right by 0.15 -->
+                <li data-coords="7.15,8" data-marker="@station" data-labelPos="E"></li>  <!-- marker-only node, moved to the right by 0.15 -->
                 <li data-coords="8,3" data-dir="E"></li>
                 <li data-coords="8,2"></li>
                 <li data-coords="9,1" data-dir="N">Lovaina</li>
-                <li data-coords="10,2" data-dir="E" data-labelPos="E"><a href="http://jqueryui.com/demos/button/"></a></li>
+                <li data-coords="10,2" data-dir="E" data-labelPos="E"></li>
                 <li data-coords="10,5"></li>
-                <li data-coords="9,6" data-dir="S" data-marker="interchange"><a href="http://jqueryui.com/demos/progressbar/">Sancho el Sabio</a></li>
+                <li data-coords="9,6" data-dir="S" data-marker="interchange">Sancho el Sabio</li>
             </ul>
         </div>
+        <div id="legend"></div>
     </div>
-    <div id="legend"></div>
-    
-
     <script type="text/javascript">
         $(".subway-map").subwayMap({ debug: true });
     </script>
