grafica sin terminar

--- a/src/html/grafica.html
+++ b/src/html/grafica.html
@@ -49,7 +49,10 @@
         navigation links.</p>
     <h3>Resize the browser window to see the effect.</h3>
     <canvas id="miGrafica" width="400" height="300" id="miGrafica"></canvas>
-    <p>Valores: <label id="valores"></label></p>
+    <p id="valores"></p>
+    <p id="contador">:="mis_datos".contador:</p>
+    <p id="velocidad">:="mis_datos".Velocidad:</p>
+    <p id="aceleracion">:="mis_datos".Aceleracion:</p>
 </div>
 
 <script type="text/javascript" src="../js/grafica.js"></script>
